[package]
name = "tetris"
version = "0.0.1"
authors = ["Trang Mai <trangmaiq@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.30.0"

[features]
# default means that by default, the following features ("sdl2/image") will be enabled.
# sdl2/image means: sdl2 refers to the crate where we want to enable a feature
# and image is the feature we want to enable
default = ["sdl2/image"]